@@ -1,54 +1,0 @@
-// -*- C++ -*-
-// $Id$
-
-/**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.7.4
- * TAO and the TAO IDL Compiler have been developed by:
- *       Center for Distributed Object Computing
- *       Washington University
- *       St. Louis, MO
- *       USA
- *       http://www.cs.wustl.edu/~schmidt/doc-center.html
- * and
- *       Distributed Object Computing Laboratory
- *       University of California at Irvine
- *       Irvine, CA
- *       USA
- *       http://doc.ece.uci.edu/
- * and
- *       Institute for Software Integrated Systems
- *       Vanderbilt University
- *       Nashville, TN
- *       USA
- *       http://www.isis.vanderbilt.edu/
- *
- * Information about TAO is available at:
- *     http://www.cs.wustl.edu/~schmidt/TAO.html
- **/
-
-// TAO_IDL - Generated from
-// C:\ACE\latest\ACE_wrappers\TAO\TAO_IDL\be\be_codegen.cpp:471
-
-#ifndef _TAO_IDL_CCM_DDSS_H
-#define _TAO_IDL_CCM_DDSS_H
-
-#include /**/ "ace/pre.h"
-
-#include "dds4ccm_BaseC.h"
-#include "dds_rtf2_dcpsS.h"
-
-#if !defined (ACE_LACKS_PRAGMA_ONCE)
-# pragma once
-#endif /* ACE_LACKS_PRAGMA_ONCE */
-
-#include "connectors/dds4ccm/idl/dds4ccm_DataListenerControlS.h"
-#include "connectors/dds4ccm/idl/dds4ccm_StateListenerControlS.h"
-#include "connectors/dds4ccm/idl/dds4ccm_PortStatusListenerS.h"
-#include "connectors/dds4ccm/idl/dds4ccm_ConnectorStatusListenerS.h"
-#include "connectors/dds4ccm/idl/dds4ccm_ConnectorS.h"
-
-#include /**/ "dds4ccm_skel_export.h"
-
-#include /**/ "ace/post.h"
-#endif /* ifndef */
-
